# ElinsCV

./: README.md
Ex1/: CMakeLists.txt  main.cpp
Ex1/Variants/: .directory  Var1.cpp  Var1.h  Var10.cpp  Var10.h  Var11.cpp  Var11.h  Var12.cpp  Var12.h  Var13.cpp  Var13.h  Var14.cpp  Var14.h  Var15.cpp  Var15.h  Var16.cpp  Var16.h  Var17.cpp  Var17.h  Var18.cpp  Var18.h  Var19.cpp  Var19.h  Var2.cpp  Var2.h  Var20.cpp  Var20.h  Var3.cpp  Var3.h  Var4.cpp  Var4.h  Var5.cpp  Var5.h  Var6.cpp  Var6.h  Var7.cpp  Var7.h  Var8.cpp  Var8.h  Var9.cpp  (+2 more)
Presentations/: ЭЛИНС. Занятие 1.pptx  ЭЛИНС. Занятие 2.pptx  ЭЛИНС. Занятие 3.pptx
